--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^4.11.0",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "vue-concise-slider": "^3.3.6"
   }
 }
