--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "nodemon": "^1.11.0",
     "prettier": "1.14.3",
     "sass-loader": "^7.1.0",
-    "vue-concise-slider": "^3.3.6"
+    "scrollto-with-animation": "^4.5.2"
   }
 }
