--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "acorn": "^6.0.4",
+    "animated-scroll-to": "^1.2.2",
     "babel-eslint": "^8.2.1",
     "eslint": "^3.19.0",
     "eslint-config-prettier": "^3.1.0",
@@ -28,7 +29,6 @@
     "node-sass": "^4.11.0",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3",
-    "sass-loader": "^7.1.0",
-    "scrollto-with-animation": "^4.5.2"
+    "sass-loader": "^7.1.0"
   }
 }
