--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "include-media": "^1.4.9",
     "node-sass": "^4.11.0",
     "nodemon": "^1.11.0",
+    "picturefill": "^3.0.3",
     "prettier": "1.14.3",
     "sass-loader": "^7.1.0"
   }
