--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "picturefill": "^3.0.3",
     "prettier": "1.14.3",
     "sass-loader": "^7.1.0",
+    "scroll-into-view-if-needed": "^2.2.25",
     "typed.js": "^2.0.11"
   }
 }
