--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "1.14.3",
     "sass-loader": "^7.1.0",
     "scroll-into-view-if-needed": "^2.2.25",
+    "smooth-scroll-into-view-if-needed": "^1.1.28",
     "typed.js": "^2.0.11"
   }
 }
